feat(app): add auth sync flow and harden password reset stability